Tests/a1/reject/29.ul
int main (int x) {
	if (x ==3) {
		int x;
	}
}